# ketamind_backend

./: .env.example  .gitignore  SETUP_GUIDE.md  VAPI_SETUP.md  agent.py  agnoscript.py  drop_user_fkey.sql  fix_todos_permissions.sql  inspect_agno.py  main.py  package-lock.json  pyproject.toml  quick_test.py  supabase_rls_fix.sql  system_prompt.txt  test_vapi_webhook.py  workflow.py  workflowTest.py  workflowv2.py
api/v1/: chat_interaction.py  goal_plan_generation.py  schedule_call.py  todo_register.py  vapi_webhook.py
database/: supabaseClient.py
database/models/: todo_model.py
models/: README.md  __init__.py  base_models.py  examples.py
prisma/: schema.prisma
prisma/migrations/20250909205248_initt/: migration.sql
service/: chat_service.py  goals_service.py  todo_crud.py
tools/: calling_tool.py  crudTodos_tool.py  getcalltranscript_tool.py  last_call_id.txt
